tests/duarouter/function/skip_routing/invalid/gaps_ignore/errors.duarouter
Warning: Edge 'left' not connected to edge 'end' for vehicle 'left_gap'.
Warning: The vehicle 'left_gap' has no valid route.
Warning: Edge 'middle' not connected to edge 'rend' for vehicle 'middle_gap'.
Warning: The vehicle 'middle_gap' has no valid route.
